--- a/__fixtures__/test-project-rsc-kitchen-sink/web/src/layouts/AuthLayout/AuthLayout.css
+++ b/__fixtures__/test-project-rsc-kitchen-sink/web/src/layouts/AuthLayout/AuthLayout.css
@@ -1,11 +1,12 @@
-.navigation-layout {
+.auth-layout {
   & > nav {
     display: flex;
     justify-content: space-between;
     align-items: center;
     padding: 10px;
-    background-color: color-mix(in srgb, yellow 50%, transparent);
-    border-bottom: 2px dashed color-mix(in srgb, yellow 90%, black);
+    padding-left: 30px;
+    background-color: color-mix(in srgb, forestgreen 50%, transparent);
+    border-bottom: 2px dashed color-mix(in srgb, forestgreen 90%, black);
 
     & ul {
       list-style: none;
@@ -23,16 +24,14 @@
       color: #333;
       padding: 5px;
       border-bottom: 2px solid transparent;
-
-      & .auth-status {
-        display: inline-block;
-        padding-left: 2px;
-        margin-top: -6px;
-      }
     }
 
     & a:hover {
       border-bottom: 2px solid #333;
+    }
+
+    & .active {
+      border-bottom: 2px solid color-mix(in srgb, forestgreen 90%, black);
     }
   }
 }
