chore(rsc): Add ServerDelayForm to rsc-caching fixture

--- a/__fixtures__/rsc-caching/web/src/layouts/MainLayout/MainLayout.css
+++ b/__fixtures__/rsc-caching/web/src/layouts/MainLayout/MainLayout.css
@@ -1,4 +1,10 @@
 .main-layout {
+  .demo-wrapper {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+
   nav {
     display: flex;
     justify-content: center;
