--- a/packages/create-redwood-app/templates/js/web/src/index.html
+++ b/packages/create-redwood-app/templates/js/web/src/index.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="icon" type="image/png" href="/favicon.png" />
+<title>Redwood App</title>
 </head>
 
 <body>
