RSC: Add blog pages to kitchen sink test project

--- a/__fixtures__/test-project-rsc-kitchen-sink/web/src/layouts/NavigationLayout/NavigationLayout.css
+++ b/__fixtures__/test-project-rsc-kitchen-sink/web/src/layouts/NavigationLayout/NavigationLayout.css
@@ -1,4 +1,8 @@
 .navigation-layout {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+
   & > nav {
     display: flex;
     justify-content: space-between;
@@ -34,5 +38,18 @@
     & a:hover {
       border-bottom: 2px solid #333;
     }
+  }
+
+  & > p {
+    margin: 0.4rem 0;
+  }
+
+  & > hr {
+    margin: 0.5rem 0 0 0;
+  }
+
+  & > main {
+    display: flex;
+    flex-grow: 1;
   }
 }
