--- a/__fixtures__/test-project-rsc-kitchen-sink/web/src/layouts/BlogLayout/BlogLayout.css
+++ b/__fixtures__/test-project-rsc-kitchen-sink/web/src/layouts/BlogLayout/BlogLayout.css
@@ -1,11 +1,29 @@
 .blog-layout {
   display: flex;
   flex-direction: row;
+  flex-grow: 1;
 
-  nav {
+  & > nav {
     width: 12rem;
     border-right: 1px solid gray;
-    height: 100vh;
     margin-right: 1rem;
+
+    button {
+      background: none;
+      border: none;
+      color: blue;
+      text-decoration: underline;
+      cursor: pointer;
+      padding: 0;
+      font: inherit;
+    }
+
+    li.new-post {
+      margin-bottom: 0.8rem;
+    }
+  }
+
+  & > section {
+    flex-grow: 1;
   }
 }
